Figure out how to stop the text from overfowing on the end, but is now overflowing at the start

--- a/src/cells/Cell.css
+++ b/src/cells/Cell.css
@@ -54,8 +54,19 @@
 
 [contentEditable="true"] {
     border: 1px solid blue;
+    /* white-space: nowrap; */
+    text-overflow: clip;
+    overflow: hidden;
 }
 
 [contentEditable="true"]:focus {
     outline: none;
+}
+
+.cell-content {
+    border: 1px solid blue;
+    white-space: nowrap;
+    text-overflow: clip;
+    overflow: hidden;
+    position: sticky;
 }
